# i3-bg-blur

./: .gitignore  Cargo.toml
src/: args.yaml  i3_listener.rs  main.rs  worker.rs
